--- a/ops-manager/om/Dockerfile
+++ b/ops-manager/om/Dockerfile
@@ -1,5 +1,5 @@
 # Pull base image.
-FROM ubuntu:18.04
+FROM ubuntu:jammy
 
 ARG PKG_NAME
 ARG MONGO_INITDB_ROOT_USERNAME
@@ -7,11 +7,15 @@ ARG MONGO_INITDB_ROOT_PASSWORD
 ADD bootstrap.sh /
 ADD startup.sh /
 ADD ./$PKG_NAME /
-ENV DEBIAN_FRONTEND=noninteractive
+RUN set -eux; \
+	groupadd --gid 999 --system mongodb-mms; \
+	useradd --uid 999 --system --gid mongodb-mms --home-dir /mongodb-mms mongodb-mms;
+
+# RUN tar -zxvf $PKG_NAME -C /opt/mongodb/
 RUN chmod +x ./bootstrap.sh && ./bootstrap.sh
 
 # Define mountable directories.
-VOLUME ["/opt/mongodb/mms/logs", "/opt/mongodb/mms/mongodb-releases", "/headDB", "/snapshots"]
+VOLUME ["/mongodb-mms/logs", "/mongodb-mms/mongodb-releases", "/headDB", "/snapshots"]
 
 # Define default command.
 CMD "/startup.sh"
